@@ -1,3 +1,8 @@
+2005-05-18  Lorenzo Gil Sanchez  <lgs@sicem.biz>
+
+	* newsitems.py (item): added gnomepython 2.11.2 and
+	gnomepythonextras 2.11.2. Patch by pachi
+
 2005-05-15  Christian Reis <kiko@async.com.br>
 
 	* applications.src: Added purl
